update meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <title><%= htmlWebpackPlugin.options.title %></title>
         <link rel="icon" href="public/favicon.ico">
-        <meta property="og:image" content="public/thumbnail.jpg" />
+        <!-- <meta property="og:image" content="public/thumbnail.jpg" /> -->
     </head>
     <body>
         <div id='root'></div>
